force-app/main/default/objects/Invoice__x/Invoice__x.object-meta.xml
<CustomObject>
    <description>Invoices</description>
    <externalDataSource>tesData</externalDataSource>
    <externalName>Invoices</externalName>
    <label>Invoice</label>
    <pluralLabel>Invoices</pluralLabel>
</CustomObject>