force-app/main/default/objects/Invoice__x/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <description>Address</description>
    <externalDeveloperName>Address</externalDeveloperName>
    <label>Address</label>
    <length>60</length>
    <type>Text</type>
</CustomField>