force-app/main/default/objects/Invoice__x/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <description>City</description>
    <externalDeveloperName>City</externalDeveloperName>
    <label>City</label>
    <length>15</length>
    <type>Text</type>
</CustomField>