force-app/main/default/objects/Invoice__x/fields/CustomerID__c.field-meta.xml
<CustomField>
    <fullName>CustomerID__c</fullName>
    <description>CustomerID</description>
    <externalDeveloperName>CustomerID</externalDeveloperName>
    <label>CustomerID</label>
    <length>5</length>
    <type>Text</type>
</CustomField>