force-app/main/default/objects/Invoice__x/fields/Discount__c.field-meta.xml
<CustomField>
    <fullName>Discount__c</fullName>
    <description>Discount</description>
    <externalDeveloperName>Discount</externalDeveloperName>
    <label>Discount</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>