force-app/main/default/objects/Invoice__x/fields/ExtendedPrice__c.field-meta.xml
<CustomField>
    <fullName>ExtendedPrice__c</fullName>
    <description>ExtendedPrice</description>
    <externalDeveloperName>ExtendedPrice</externalDeveloperName>
    <label>ExtendedPrice</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>