force-app/main/default/objects/Invoice__x/fields/Freight__c.field-meta.xml
<CustomField>
    <fullName>Freight__c</fullName>
    <description>Freight</description>
    <externalDeveloperName>Freight</externalDeveloperName>
    <label>Freight</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>