force-app/main/default/objects/Invoice__x/fields/PostalCode__c.field-meta.xml
<CustomField>
    <fullName>PostalCode__c</fullName>
    <description>PostalCode</description>
    <externalDeveloperName>PostalCode</externalDeveloperName>
    <label>PostalCode</label>
    <length>10</length>
    <type>Text</type>
</CustomField>