force-app/main/default/objects/Invoice__x/fields/RequiredDate__c.field-meta.xml
<CustomField>
    <fullName>RequiredDate__c</fullName>
    <description>RequiredDate</description>
    <externalDeveloperName>RequiredDate</externalDeveloperName>
    <label>RequiredDate</label>
    <type>DateTime</type>
</CustomField>