force-app/main/default/objects/Invoice__x/fields/Salesperson__c.field-meta.xml
<CustomField>
    <fullName>Salesperson__c</fullName>
    <description>Salesperson</description>
    <externalDeveloperName>Salesperson</externalDeveloperName>
    <label>Salesperson</label>
    <length>31</length>
    <type>Text</type>
</CustomField>