force-app/main/default/objects/Invoice__x/fields/ShipCity__c.field-meta.xml
<CustomField>
    <fullName>ShipCity__c</fullName>
    <description>ShipCity</description>
    <externalDeveloperName>ShipCity</externalDeveloperName>
    <label>ShipCity</label>
    <length>15</length>
    <type>Text</type>
</CustomField>