force-app/main/default/objects/Invoice__x/fields/ShipperName__c.field-meta.xml
<CustomField>
    <fullName>ShipperName__c</fullName>
    <description>ShipperName</description>
    <externalDeveloperName>ShipperName</externalDeveloperName>
    <label>ShipperName</label>
    <length>40</length>
    <type>Text</type>
</CustomField>