force-app/main/default/objects/Invoice__x/fields/ShipPostalCode__c.field-meta.xml
<CustomField>
    <fullName>ShipPostalCode__c</fullName>
    <description>ShipPostalCode</description>
    <externalDeveloperName>ShipPostalCode</externalDeveloperName>
    <label>ShipPostalCode</label>
    <length>10</length>
    <type>Text</type>
</CustomField>