force-app/main/default/objects/Invoice__x/fields/ShipRegion__c.field-meta.xml
<CustomField>
    <fullName>ShipRegion__c</fullName>
    <description>ShipRegion</description>
    <externalDeveloperName>ShipRegion</externalDeveloperName>
    <label>ShipRegion</label>
    <length>15</length>
    <type>Text</type>
</CustomField>